Show bar backgrounds

--- a/RMSKIN/Skins/uhe/Ping/Ping.ini
+++ b/RMSKIN/Skins/uhe/Ping/Ping.ini
@@ -11,6 +11,7 @@ Information=Checks ping.
 icon=[\xf1eb]
 text=Ping
 BackgroundGroup=OpaqueBackgroundGroup
+BarBackground=#OpaqueBarBackgroundColor#
 
 [measurePing]
 Measure=Plugin
@@ -36,4 +37,3 @@ Group=TextGroup
 
 [meterBar]
 MeasureName=measurePing
-SolidColor=#LightBarBackgroundColor#
