--- a/RMSKIN/Skins/uhe/System/Download/Download.ini
+++ b/RMSKIN/Skins/uhe/System/Download/Download.ini
@@ -11,6 +11,7 @@ Information=Checks download usage.
 icon=[\xf019]
 text=Download
 BackgroundGroup=OpaqueBackgroundGroup
+BarBackground=#OpaqueBarBackgroundColor#
 
 [measureDownload]
 Measure=NetIn
@@ -35,4 +36,3 @@ Group=TextGroup
 
 [meterBar]
 MeasureName=measureDownload
-SolidColor=#LightBarBackgroundColor#
