--- a/RMSKIN/Skins/uhe/System/Memory/Memory.ini
+++ b/RMSKIN/Skins/uhe/System/Memory/Memory.ini
@@ -11,6 +11,7 @@ Information=Checks RAM usage.
 icon=[\xf538]
 text=RAM
 BackgroundGroup=OpaqueBackgroundGroup
+BarBackground=#OpaqueBarBackgroundColor#
 
 [measureRamTotal]
 Measure=PhysicalMemory
@@ -42,4 +43,3 @@ Group=TextGroup
 
 [meterBar]
 MeasureName=measureRam
-SolidColor=#LightBarBackgroundColor#
