Fix weather hover tooltip not updating correctly

--- a/RMSKIN/Skins/uhe/Weather/weather.ini
+++ b/RMSKIN/Skins/uhe/Weather/weather.ini
@@ -156,7 +156,7 @@ InlineSetting=Face | #IconFace#
 InlinePattern=#iconAQI#
 DynamicVariables=1
 Group=TextGroup
-MouseOverAction=[!ShowMeter meterTooltipAQI]
+MouseOverAction=[!ShowMeter meterTooltipAQI][!Redraw]
 MouseLeaveAction=[!HideMeter meterTooltipAQI]
 
 [meterBarAQIContainer]
@@ -212,7 +212,7 @@ InlineSetting=Face | #IconFace#
 InlinePattern=#iconHumidity#
 DynamicVariables=1
 Group=TextGroup
-MouseOverAction=[!ShowMeter meterTooltipHumidity]
+MouseOverAction=[!ShowMeter meterTooltipHumidity][!Redraw]
 MouseLeaveAction=[!HideMeter meterTooltipHumidity]
 
 [meterBarHumidityContainer]
