Add simple version footer to settings

--- a/RMSKIN/Skins/uhe/Settings/Settings.ini
+++ b/RMSKIN/Skins/uhe/Settings/Settings.ini
@@ -253,3 +253,14 @@ Measure=Plugin
 Plugin=RunCommand
 DynamicVariables=1
 Parameter=REG ADD HKCU\SOFTWARE\Microsoft\Windows\CurrentVersion\Themes\Personalize /v SystemUsesLightTheme /t REG_DWORD /d #ToggleLightMode# /f
+
+[meterVersionFooter]
+Meter=String
+Y=#DropdownHeight#
+X=(#Width# / 2)
+Text=uhe #CurrentVersion#
+Group=TextGroup
+AntiAlias=1
+FontFace=#FontFace#
+StringAlign=CenterBottom
+Container=meterDropdown
