Cleanup includes and measure

--- a/RMSKIN/Skins/uhe/Settings/Settings.ini
+++ b/RMSKIN/Skins/uhe/Settings/Settings.ini
@@ -1,5 +1,6 @@
 [Rainmeter]
 @Include=#@#Variables/mainvariables.inc
+@Include2=#@#Variables/easingvariables.inc
 ContextTitle2="Edit user variables"
 ContextAction2=["#@#Variables/uservariables.inc"]
 OnRefreshAction=[!CommandMeasure measureNewUpdate Run]
