--- a/RMSKIN/Skins/uhe/Time/Digital/Digital.ini
+++ b/RMSKIN/Skins/uhe/Time/Digital/Digital.ini
@@ -1,5 +1,6 @@
 [Rainmeter]
 @Include=#@#Variables/mainvariables.inc
+@Include2=#@#Variables/easingvariables.inc
 ContextTitle2="Edit timestamp generator"
 ContextAction2=["#CURRENTPATH#timestampgen.inc"]
 OnRefreshAction=[!Delay 500]#HorizontalExpandCommand#[!Delay 2000]#HorizontalCollapseCommand#
