Completely fix weather tooltips not updating correctly

--- a/RMSKIN/Skins/uhe/Weather/weather.ini
+++ b/RMSKIN/Skins/uhe/Weather/weather.ini
@@ -157,7 +157,7 @@ InlinePattern=#iconAQI#
 DynamicVariables=1
 Group=TextGroup
 MouseOverAction=[!ShowMeter meterTooltipAQI][!Redraw]
-MouseLeaveAction=[!HideMeter meterTooltipAQI]
+MouseLeaveAction=[!HideMeter meterTooltipAQI][!Redraw]
 
 [meterBarAQIContainer]
 Meter=Shape
@@ -213,7 +213,7 @@ InlinePattern=#iconHumidity#
 DynamicVariables=1
 Group=TextGroup
 MouseOverAction=[!ShowMeter meterTooltipHumidity][!Redraw]
-MouseLeaveAction=[!HideMeter meterTooltipHumidity]
+MouseLeaveAction=[!HideMeter meterTooltipHumidity][!Redraw]
 
 [meterBarHumidityContainer]
 Meter=Shape
