Add setting to prefer 24h

--- a/RMSKIN/Skins/uhe/Settings/Settings.ini
+++ b/RMSKIN/Skins/uhe/Settings/Settings.ini
@@ -13,7 +13,7 @@ Information=Toggles different looks of the skin and system.
 
 [Variables]
 Width=200
-HeightExpanded=325
+HeightExpanded=375
 DropdownHeight=#HeightExpanded#
 Expanded=0
 
@@ -47,6 +47,14 @@ Formula=[measureLightMode]
 IfCondition=measureToggleLightMode = 0
 IfTrueAction=[!SetOption meterToggleLightMode Text [\xf204]][!SetVariable ToggleLightMode 1]
 IfFalseAction=[!SetOption meterToggleLightMode Text [\xf205]][!SetVariable ToggleLightMode 0]
+DynamicVariables=1
+
+[measurePrefer24hSetting]
+Measure=Calc
+Formula=#Prefer24h#
+IfCondition=measurePrefer24hSetting = 0
+IfTrueAction=[!SetOption meterTogglePrefer24h Text [\xf204]][!SetVariable TogglePrefer24h 1]
+IfFalseAction=[!SetOption meterTogglePrefer24h Text [\xf205]][!SetVariable TogglePrefer24h 0]
 DynamicVariables=1
 
 [measureNewUpdate]
@@ -254,6 +262,16 @@ Measure=Plugin
 Plugin=RunCommand
 DynamicVariables=1
 Parameter=REG ADD HKCU\SOFTWARE\Microsoft\Windows\CurrentVersion\Themes\Personalize /v SystemUsesLightTheme /t REG_DWORD /d #ToggleLightMode# /f
+
+[meterLabelPrefer24h]
+Meter=String
+MeterStyle=styleLabel
+Text=Prefer 24h
+
+[meterTogglePrefer24h]
+Meter=String
+MeterStyle=styleToggle
+LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables Prefer24h #TogglePrefer24h# "#@#Variables/uservariables.inc"][!SetVariableGroup Prefer24h #TogglePrefer24h# TimeGroup][!UpdateGroup TimeGroup][!SetVariable Prefer24h #TogglePrefer24h#][!Update]
 
 [meterVersionFooter]
 Meter=String
