Use 24h setting on digital time

--- a/RMSKIN/Skins/uhe/Time/Digital/Digital.ini
+++ b/RMSKIN/Skins/uhe/Time/Digital/Digital.ini
@@ -4,6 +4,7 @@
 ContextTitle2="Edit timestamp generator"
 ContextAction2=["#CURRENTPATH#timestampgen.inc"]
 OnRefreshAction=[!Delay 500]#HorizontalExpandCommand#[!Delay 2000]#HorizontalCollapseCommand#
+Group=AllSkins | TimeGroup
 
 [Metadata]
 Author=Joehu
@@ -14,9 +15,16 @@ Information=Checks time using digital.
 [Variables]
 DropdownHeight=[meterDropdownContent:W]
 
+[measurePrefer24h]
+Measure=Calc
+DynamicVariables=1
+Formula=#Prefer24h#
+IfCondition=#CURRENTSECTION# = 0
+IfTrueAction=[!SetOption measureTime Format "%#I:%M:%S %p"]
+IfFalseAction=[!SetOption measureTime Format ""]
+
 [measureTime]
 Measure=Time
-Format=%#I:%M:%S %p
 
 [measureHours]
 Measure=Time
@@ -73,6 +81,7 @@ Padding=#PaddingSize#
 Group=TextGroup
 MouseOverAction=#HorizontalExpandCommand#[!ShowMeter meterDiscordIcon]
 MouseLeaveAction=#HorizontalCollapseCommand#[!HideMeter meterDiscordIcon]
+OnUpdateAction=[!UpdateMeter meterBackground]
 
 [meterDiscordIcon]
 Meter=String
