Improve code quality of discord icon position logic

--- a/RMSKIN/Skins/uhe/Time/Digital/Digital.ini
+++ b/RMSKIN/Skins/uhe/Time/Digital/Digital.ini
@@ -90,12 +90,13 @@ Text=[\xf392]
 FontSize=12
 Group=TextGroup
 AntiAlias=1
-Hidden=1
-X=10
-Y=-22R
+Y=R
+StringAlign=LeftBottom
+Padding=#PaddingSize#
 DynamicVariables=1
 LeftMouseUpAction=#PlayButtonClick#[!ToggleMeterGroup TimestampGroup][!UpdateMeterGroup TimestampGroup][!Redraw]
 ToolTipText=click to toggle discord timestamp generator
+Hidden=1
 
 [meterDropdownBackground]
 Meter=Shape
