Remove ability to change system theme
- Closes https://github.com/uhe-org/uhe/issues/19

--- a/RMSKIN/Skins/uhe/Settings/Settings.ini
+++ b/RMSKIN/Skins/uhe/Settings/Settings.ini
@@ -41,9 +41,17 @@ IfTrueAction=[!SetOption meterToggleIcons Text [\xf204]][!SetVariable ToggleIcon
 IfFalseAction=[!SetOption meterToggleIcons Text [\xf205]][!SetVariable ToggleIcons 0]
 DynamicVariables=1
 
+[measureToggleSyncSystemTheme]
+Measure=Calc
+Formula=#SyncSystemTheme#
+IfCondition=measureToggleSyncSystemTheme = 0
+IfTrueAction=[!SetOption meterToggleSyncSystemTheme Text [\xf204]][!SetVariable ToggleSyncSystemTheme 1][!ShowMeter meterLabelLightMode][!ShowMeter meterToggleLightMode]
+IfFalseAction=[!SetOption meterToggleSyncSystemTheme Text [\xf205]][!SetVariable ToggleSyncSystemTheme 0][!HideMeter meterLabelLightMode][!HideMeter meterToggleLightMode]
+DynamicVariables=1
+
 [measureToggleLightMode]
 Measure=Calc
-Formula=[measureLightMode]
+Formula=#LightMode#
 IfCondition=measureToggleLightMode = 0
 IfTrueAction=[!SetOption meterToggleLightMode Text [\xf204]][!SetVariable ToggleLightMode 1]
 IfFalseAction=[!SetOption meterToggleLightMode Text [\xf205]][!SetVariable ToggleLightMode 0]
@@ -142,7 +150,7 @@ MouseOverAction=[!SetOption meterToggleHover Highlight "Fill Color #LightHighlig
 MouseLeaveAction=[!SetOption meterToggleHover Highlight "Fill Color 0,0,0,0"][!UpdateMeter meterToggleHover][!Redraw]
 
 [styleLabel]
-Y=10R
+Y=R
 FontFace=#FontFace#
 Padding=#PaddingSize#
 AntiAlias=1
@@ -241,6 +249,16 @@ Meter=String
 MeterStyle=styleToggle
 LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables Icons #ToggleIcons# "#@#Variables/uservariables.inc"][!SetVariable Icons #ToggleIcons#][!SetVariableGroup Icons #ToggleIcons# IconSkins][!UpdateGroup IconSkins][!UpdateMeasure measureIcons][!UpdateMeter meterToggleIcons][!Redraw]
 
+[meterLabelSyncSystemTheme]
+Meter=String
+MeterStyle=styleLabel
+Text=Follow System Theme
+
+[meterToggleSyncSystemTheme]
+Meter=String
+MeterStyle=styleToggle
+LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables SyncSystemTheme #ToggleSyncSystemTheme# "#@#Variables/uservariables.inc"][!SetVariable SyncSystemTheme #ToggleSyncSystemTheme#][!SetVariableGroup SyncSystemTheme #ToggleSyncSystemTheme# AllSkins][!UpdateGroup AllSkins][!UpdateMeasure measureToggleSyncSystemTheme][!UpdateMeter meterToggleSyncSystemTheme][!Redraw]
+
 [meterLabelLightMode]
 Meter=String
 MeterStyle=styleLabel
@@ -249,19 +267,7 @@ Text=Light Mode
 [meterToggleLightMode]
 Meter=String
 MeterStyle=styleToggle
-LeftMouseUpAction=#PlayButtonClick#[!CommandMeasure measureChangeAppsLightMode Run][!CommandMeasure measureChangeSystemLightMode Run][!UpdateMeasure measureToggleLightMode][!UpdateMeter meterToggleLightMode][!Redraw]
-
-[measureChangeAppsLightMode]
-Measure=Plugin
-Plugin=RunCommand
-DynamicVariables=1
-Parameter=REG ADD HKCU\SOFTWARE\Microsoft\Windows\CurrentVersion\Themes\Personalize /v AppsUseLightTheme /t REG_DWORD /d #ToggleLightMode# /f
-
-[measureChangeSystemLightMode]
-Measure=Plugin
-Plugin=RunCommand
-DynamicVariables=1
-Parameter=REG ADD HKCU\SOFTWARE\Microsoft\Windows\CurrentVersion\Themes\Personalize /v SystemUsesLightTheme /t REG_DWORD /d #ToggleLightMode# /f
+LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables LightMode #ToggleLightMode# "#@#Variables/uservariables.inc"][!SetVariable LightMode #ToggleLightMode#][!SetVariableGroup LightMode #ToggleLightMode# AllSkins][!UpdateGroup AllSkins][!UpdateMeasure measureToggleLightMode][!UpdateMeter meterToggleLightMode][!Redraw]
 
 [meterLabelPrefer24h]
 Meter=String
