Add indicator for energy peak hours on digital time skin

--- a/RMSKIN/Skins/uhe/Time/Digital/Digital.ini
+++ b/RMSKIN/Skins/uhe/Time/Digital/Digital.ini
@@ -20,15 +20,22 @@ Measure=Calc
 DynamicVariables=1
 Formula=#Prefer24h#
 IfCondition=#CURRENTSECTION# = 0
-IfTrueAction=[!SetOption measureTime Format "%#I:%M:%S %p"]
-IfFalseAction=[!SetOption measureTime Format ""]
+IfTrueAction=[!SetOption measureTime Format "%#I:%M:%S %p"][!UpdateMeasure measureTime][!UpdateMeter meterEdge][!UpdateMeter meterPeakHoursIcon]
+IfFalseAction=[!SetOption measureTime Format ""][!UpdateMeasure measureTime][!UpdateMeter meterEdge][!UpdateMeter meterPeakHoursIcon]
 
 [measureTime]
 Measure=Time
 
+[measureWeekday]
+Measure=Time
+Format=%u
+
 [measureHours]
 Measure=Time
 Format=%H
+IfCondition=(#CURRENTSECTION# >= 17) && (#CURRENTSECTION# < 20) && (measureWeekday < 6)
+IfTrueAction=[!ShowMeter meterPeakHoursIcon]
+IfFalseAction=[!HideMeter meterPeakHoursIcon]
 
 [measureMinutes]
 Measure=Time
@@ -97,6 +104,20 @@ DynamicVariables=1
 LeftMouseUpAction=#PlayButtonClick#[!ToggleMeterGroup TimestampGroup][!UpdateMeterGroup TimestampGroup][!Redraw]
 ToolTipText=click to toggle discord timestamp generator
 Hidden=1
+
+[meterPeakHoursIcon]
+Meter=String
+FontFace=#IconFace#
+Text=[\xf0e7] [\xe529]
+FontSize=12
+AntiAlias=1
+X=[meterEdge:W]
+Y=r
+Padding=#PaddingSize#
+DynamicVariables=1
+StringAlign=RightBottom
+ToolTipText=Energy peak hours (5-8PM)
+FontColor=255,255,0
 
 [meterDropdownBackground]
 Meter=Shape
