Simplify settings toggle logic

--- a/RMSKIN/Skins/uhe/Settings/Settings.ini
+++ b/RMSKIN/Skins/uhe/Settings/Settings.ini
@@ -21,48 +21,48 @@ Expanded=0
 Measure=Calc
 Formula=#Expanded#
 IfCondition=measureExpanded = 0
-IfTrueAction=[!SetVariable ToggleExpanded 1]#VerticalCollapseCommand#
-IfFalseAction=[!SetVariable ToggleExpanded 0]#VerticalExpandCommand#
+IfTrueAction=#VerticalCollapseCommand#
+IfFalseAction=#VerticalExpandCommand#
 DynamicVariables=1
 
 [measureGradientSetting]
 Measure=Calc
 Formula=#Gradient#
 IfCondition=measureGradientSetting = 0
-IfTrueAction=[!SetOption meterToggleGradient Text [\xf204]][!SetVariable ToggleGradient 1]
-IfFalseAction=[!SetOption meterToggleGradient Text [\xf205]][!SetVariable ToggleGradient 0]
+IfTrueAction=[!SetOption meterToggleGradient Text [\xf204]]
+IfFalseAction=[!SetOption meterToggleGradient Text [\xf205]]
 DynamicVariables=1
 
 [measureIcons]
 Measure=Calc
 Formula=#Icons#
 IfCondition=measureIcons = 0
-IfTrueAction=[!SetOption meterToggleIcons Text [\xf204]][!SetVariable ToggleIcons 1]
-IfFalseAction=[!SetOption meterToggleIcons Text [\xf205]][!SetVariable ToggleIcons 0]
+IfTrueAction=[!SetOption meterToggleIcons Text [\xf204]]
+IfFalseAction=[!SetOption meterToggleIcons Text [\xf205]]
 DynamicVariables=1
 
 [measureToggleSyncSystemTheme]
 Measure=Calc
 Formula=#SyncSystemTheme#
 IfCondition=measureToggleSyncSystemTheme = 0
-IfTrueAction=[!SetOption meterToggleSyncSystemTheme Text [\xf204]][!SetVariable ToggleSyncSystemTheme 1][!ShowMeter meterLabelLightMode][!ShowMeter meterToggleLightMode]
-IfFalseAction=[!SetOption meterToggleSyncSystemTheme Text [\xf205]][!SetVariable ToggleSyncSystemTheme 0][!HideMeter meterLabelLightMode][!HideMeter meterToggleLightMode]
+IfTrueAction=[!SetOption meterToggleSyncSystemTheme Text [\xf204]][!ShowMeter meterLabelLightMode][!ShowMeter meterToggleLightMode]
+IfFalseAction=[!SetOption meterToggleSyncSystemTheme Text [\xf205]][!HideMeter meterLabelLightMode][!HideMeter meterToggleLightMode]
 DynamicVariables=1
 
 [measureToggleLightMode]
 Measure=Calc
 Formula=#LightMode#
 IfCondition=measureToggleLightMode = 0
-IfTrueAction=[!SetOption meterToggleLightMode Text [\xf204]][!SetVariable ToggleLightMode 1]
-IfFalseAction=[!SetOption meterToggleLightMode Text [\xf205]][!SetVariable ToggleLightMode 0]
+IfTrueAction=[!SetOption meterToggleLightMode Text [\xf204]]
+IfFalseAction=[!SetOption meterToggleLightMode Text [\xf205]]
 DynamicVariables=1
 
 [measurePrefer24hSetting]
 Measure=Calc
 Formula=#Prefer24h#
 IfCondition=measurePrefer24hSetting = 0
-IfTrueAction=[!SetOption meterTogglePrefer24h Text [\xf204]][!SetVariable TogglePrefer24h 1]
-IfFalseAction=[!SetOption meterTogglePrefer24h Text [\xf205]][!SetVariable TogglePrefer24h 0]
+IfTrueAction=[!SetOption meterTogglePrefer24h Text [\xf204]]
+IfFalseAction=[!SetOption meterTogglePrefer24h Text [\xf205]]
 DynamicVariables=1
 
 [measureNewUpdate]
@@ -143,7 +143,7 @@ Padding=#PaddingSize#
 Text=[\xf0c9]
 AntiAlias=1
 FontSize=16
-LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables Expanded #ToggleExpanded#][!SetVariable Expanded #ToggleExpanded#][!UpdateMeasure measureExpanded][!UpdateMeter meterToggle]
+LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables Expanded (1-#Expanded#)][!SetVariable Expanded (1-#Expanded#)][!UpdateMeasure measureExpanded][!UpdateMeter meterToggle]
 Group=TextGroup
 DynamicVariables=1
 MouseOverAction=[!SetOption meterToggleHover Highlight "Fill Color #LightHighlight#,#NoGradientTransparency#"][!UpdateMeter meterToggleHover][!Redraw]
@@ -189,7 +189,7 @@ Text=Gradient
 [meterToggleGradient]
 Meter=String
 MeterStyle=styleToggle
-LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables Gradient #ToggleGradient# "#@#Variables/uservariables.inc"][!SetVariableGroup Gradient #ToggleGradient# AllSkins][!UpdateGroup AllSkins][!Update]
+LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables Gradient (1-#Gradient#) "#@#Variables/uservariables.inc"][!SetVariableGroup Gradient (1-#Gradient#) AllSkins][!UpdateGroup AllSkins][!Update]
 
 [meterLabelLightHighlight]
 Meter=String
@@ -247,7 +247,7 @@ Text=Icons
 [meterToggleIcons]
 Meter=String
 MeterStyle=styleToggle
-LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables Icons #ToggleIcons# "#@#Variables/uservariables.inc"][!SetVariable Icons #ToggleIcons#][!SetVariableGroup Icons #ToggleIcons# IconSkins][!UpdateGroup IconSkins][!UpdateMeasure measureIcons][!UpdateMeter meterToggleIcons][!Redraw]
+LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables Icons (1-#Icons#) "#@#Variables/uservariables.inc"][!SetVariable Icons (1-#Icons#)][!SetVariableGroup Icons (1-#Icons#) IconSkins][!UpdateGroup IconSkins][!UpdateMeasure measureIcons][!UpdateMeter meterToggleIcons][!Redraw]
 
 [meterLabelSyncSystemTheme]
 Meter=String
@@ -257,7 +257,7 @@ Text=Follow System Theme
 [meterToggleSyncSystemTheme]
 Meter=String
 MeterStyle=styleToggle
-LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables SyncSystemTheme #ToggleSyncSystemTheme# "#@#Variables/uservariables.inc"][!SetVariable SyncSystemTheme #ToggleSyncSystemTheme#][!SetVariableGroup SyncSystemTheme #ToggleSyncSystemTheme# AllSkins][!UpdateGroup AllSkins][!UpdateMeasure measureToggleSyncSystemTheme][!UpdateMeter meterToggleSyncSystemTheme][!Redraw]
+LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables SyncSystemTheme (1-#SyncSystemTheme#) "#@#Variables/uservariables.inc"][!SetVariable SyncSystemTheme (1-#SyncSystemTheme#)][!SetVariableGroup SyncSystemTheme (1-#SyncSystemTheme#) AllSkins][!UpdateGroup AllSkins][!UpdateMeasure measureToggleSyncSystemTheme][!UpdateMeter meterToggleSyncSystemTheme][!Redraw]
 
 [meterLabelLightMode]
 Meter=String
@@ -267,7 +267,7 @@ Text=Light Mode
 [meterToggleLightMode]
 Meter=String
 MeterStyle=styleToggle
-LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables LightMode #ToggleLightMode# "#@#Variables/uservariables.inc"][!SetVariable LightMode #ToggleLightMode#][!SetVariableGroup LightMode #ToggleLightMode# AllSkins][!UpdateGroup AllSkins][!UpdateMeasure measureToggleLightMode][!UpdateMeter meterToggleLightMode][!Redraw]
+LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables LightMode (1-#LightMode#) "#@#Variables/uservariables.inc"][!SetVariable LightMode (1-#LightMode#)][!SetVariableGroup LightMode (1-#LightMode#) AllSkins][!UpdateGroup AllSkins][!UpdateMeasure measureToggleLightMode][!UpdateMeter meterToggleLightMode][!Redraw]
 
 [meterLabelPrefer24h]
 Meter=String
@@ -277,7 +277,7 @@ Text=Prefer 24h
 [meterTogglePrefer24h]
 Meter=String
 MeterStyle=styleToggle
-LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables Prefer24h #TogglePrefer24h# "#@#Variables/uservariables.inc"][!SetVariableGroup Prefer24h #TogglePrefer24h# TimeGroup][!UpdateGroup TimeGroup][!SetVariable Prefer24h #TogglePrefer24h#][!Update]
+LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables Prefer24h (1-#Prefer24h#) "#@#Variables/uservariables.inc"][!SetVariableGroup Prefer24h (1-#Prefer24h#) TimeGroup][!UpdateGroup TimeGroup][!SetVariable Prefer24h (1-#Prefer24h#)][!Update]
 
 [meterVersionFooter]
 Meter=String
