--- a/RMSKIN/Skins/uhe/Settings/Settings.ini
+++ b/RMSKIN/Skins/uhe/Settings/Settings.ini
@@ -289,6 +289,6 @@ AntiAlias=1
 FontFace=#FontFace#
 StringAlign=CenterBottom
 Container=meterDropdown
-LeftMouseUpAction=["https://github.com/uhe-org/uhe/releases/tag/#CurrentVersion#"]
+LeftMouseUpAction=#PlayButtonClick#["https://github.com/uhe-org/uhe/releases/tag/#CurrentVersion#"]
 MouseOverAction=[!SetOption meterVersionFooter InlineSetting Underline][!UpdateMeter meterVersionFooter][!Redraw]
 MouseLeaveAction=[!SetOption meterVersionFooter InlineSetting ""][!UpdateMeter meterVersionFooter][!Redraw]
